tests/miniJava/neg/006815_mutation.MiniJava
class new { public static void Main ( String [ ] java ) { { } } }
